@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.527 2007-12-27 16:52:34 martin Exp $
+# $Id: CHANGES,v 1.528 2007-12-27 17:30:31 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -69,6 +69,7 @@ CVS HEAD (????/??/??)
  - (2007/09/13) Improved report overview of perfornance log.
 
 2.2.5 (2007/??/??)
+ - (2007/12/27) Fixed bug# 1148 - Lost of attachments when spliting ticket.
  - (2007/12/18) Fixed bug# 2295 - IE7 tries to download [ Attachments ] or
     [ Attachments <-> Responses ].
  - (2007/12/17) Fixed bug# 2580 - Wrong quoating of semicolon if mssql is used.
